--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -8,6 +8,8 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color: black;
+  color: white;
 }
 
 .App {
@@ -33,7 +35,7 @@ body,
 .colors-wrap {
   height: 100%;
   width: 300px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 3px 6px rgb(255, 255, 255), 0 3px 6px rgba(255, 255, 255, 0.986);
 
   ul {
     list-style: none;
@@ -91,8 +93,8 @@ form {
 
   button {
     border: none;
-    background-color: black;
-    color: white;
+    background-color: rgb(250, 249, 249);
+    color: rgb(13, 14, 13);
     padding: 3px 8px;
     margin-top: 16px;
   }
